--- a/Ausarbeitung/Literatur.bib
+++ b/Ausarbeitung/Literatur.bib
@@ -140,3 +140,13 @@
     url={https://mathworld.wolfram.com/ConjugateTranspose.html},
     urldate={2024-09-06T10:16:00}
 }
+
+@misc {complexAnalysis,
+    author = { Marshall, Donald E. },
+    title = { Complex Analysis },
+    publisher = {Cambridge University Press},
+    isbn = {9781316471227},
+    isbn = {9781107134829},
+    year = {2019},
+    url = { https://katalog.slub-dresden.de/id/0-1859627056 }
+}
