2. Buch Complex Analysis hinzugefügt

--- a/Ausarbeitung/Literatur.bib
+++ b/Ausarbeitung/Literatur.bib
@@ -150,3 +150,11 @@
     year = {2019},
     url = { https://katalog.slub-dresden.de/id/0-1859627056 }
 }
+
+@book{complexAnalysisVL,
+    title={Complex analysis},
+    author={Stein, Elias M and Shakarchi, Rami},
+    volume={2},
+    year={2010},
+    publisher={Princeton University Press}
+}
