--- a/Ausarbeitung/Ausarbeitung.tex
+++ b/Ausarbeitung/Ausarbeitung.tex
@@ -56,6 +56,8 @@
 \newcommand{\Cnn}{\C^{n\times n}}
 \newcommand{\inv}{^{-1}}
 \newcommand{\1}{\mathds{1}}
+\newcommand{\Res}{\text{Res}}
+\newcommand{\interior}{\text{int}}
 
 % wird für Symbolverzeichnis benutzt, sonst gibt es Fehler
 \DeclareOldFontCommand{\bf}{\normalfont\bfseries}{\mathbf}
@@ -733,61 +735,176 @@ Tag der Einreichung: \datum
       Nun wende man sich dem Finden einer Zielfunktion zu, die die Anzahl der Eigenwerte auf einem Intervall beschreibt.
       Diese Funktion soll von dem Design-Parameter $s$ (vgl. \cite[S. 2]{hauptteilTkachuk}) abhängen und schlussendlich minimiert werden,
       um ein $s$ aus der zulässigen Menge $\Omega$ zu finden, für welches die Zielfunktion minimal ist, also kein Eigenwert in dem vorgegebenen Intervall liegt.
-      \section{mathematische Formulierung}
-      Die in diesem Abschnitt erwähnten Schritte stammen aus \cite[S. 2-4]{hauptteilTkachuk}.
+      
+      \section{Vorüberlegungen}
+            Die in diesem Abschnitt erwähnten Schritte stammen aus \cite[S. 2-4]{hauptteilTkachuk}.
 
-      Betrachte das Problem
-      $$(K-\w^2 M)x = 0$$
-      Falls man das Problem eigenständig betrachtet, so sucht man eine Familie $(\w_j)_j$, die diese Gleichung für ein $x_j \ne 0$ löst.
+            Betrachte das Problem
+            $$(K-\w^2 M)x = 0$$
+            Falls man das Problem eigenständig betrachtet, so sucht man eine Familie $(\w_j)_j$, die diese Gleichung für ein $x_j \ne 0$ löst.
 
-      Um auf die Form eines Matrix pencils und somit auf die normale Form eines verallgemeinerten Eigenwertproblems zu gelangen, definiere
-      $$\lambda_j := \w_j^2$$
+            Um auf die Form eines Matrix pencils und somit auf die normale Form eines verallgemeinerten Eigenwertproblems zu gelangen, definiere
+            $$\lambda_j := \w_j^2$$
 % zitat      
-      Für das Lösen dieser Gleichung sucht man nun nicht mehr eine Familie $(\w_j)_j$, sondern genau die Eigenwerte des pencils, $\lambda(K,M)$.
-      Man beachte aber, dass sich durch die Substitution auch die gegebenen Grenzen verändert haben:
-      man will nun, dass keine Eigenwerte des pencils $(\AlamB)$ in dem Intervall $[\lambda_a, \lambda_b]:=[\w_a^2,\w^2_b]$ liegen.
+            Für das Lösen dieser Gleichung sucht man nun nicht mehr eine Familie $(\w_j)_j$, sondern genau die Eigenwerte des pencils, $\lambda(K,M)$.
+            Man beachte aber, dass sich durch die Substitution auch die gegebenen Grenzen verändert haben:
+            man will nun, dass keine Eigenwerte des pencils $(\AlamB)$ in dem Intervall $[\lambda_a, \lambda_b]:=[\w_a^2,\w^2_b]$ liegen.
 
-      Eine normale Massematrix, d.h. eine Diagonalmatrix mit ausschließlich positiven Einträgen, ist offenbar regulär.
+            Eine normale Massematrix, d.h. eine Diagonalmatrix mit ausschließlich positiven Einträgen, ist offenbar regulär.
 % warum wichtig
-      Definiere nun die Funktion $h$ wie folgt:
-      $$h(\lambda):=\1_{[\lambda_a,\lambda_b]}(\lambda)$$
+            Definiere nun die Funktion $h$ wie folgt:
+            $$h(\lambda):=\1_{[\lambda_a,\lambda_b]}(\lambda)$$
 
-      Da man nur daran interessiert ist, ob ein Eigenwert in dem Intervall liegt oder nicht, definiere
+            Da man nur daran interessiert ist, ob ein Eigenwert in dem Intervall liegt oder nicht, definiere
 
-      $$\mu := \sum_{j=1}^{n'} h(\lambda_j)$$
+            $$\mu := \sum_{j=1}^{n'} h(\lambda_j)$$
 
-      Obwohl diese Funktion korrekt ist, so gibt es doch einige Schwachstellen, sollte man diese Funktion minimieren wollen:
+            Obwohl diese Funktion korrekt ist, so gibt es doch einige Schwachstellen, sollte man diese Funktion minimieren wollen:
 % wie kann eine Funktion korrekt sein?
-      Die Funktion ist nicht stetig differenzierbar und entscheidender: sie ist eine Treppenfunktion, damit sind alle Ableitungen gleich 0, also unbrauchbar für Minimierungsalogrithmen, die mit der Ableitung arbeiten.
+            Die Funktion ist nicht stetig differenzierbar und entscheidender: sie ist eine Treppenfunktion, damit sind alle Ableitungen gleich 0, also unbrauchbar für Minimierungsalogrithmen, die mit der Ableitung arbeiten.
 
-      Diese Probleme kann man abfedern, indem man die Funktion auf dem Intervall $[\lambda_a, \lambda_b]$ gewichtet.
+            Diese Probleme kann man abfedern, indem man die Funktion auf dem Intervall $[\lambda_a, \lambda_b]$ gewichtet.
 % abfedern
-      Nutze dazu eine Gewichtungsfunktion, die auf dem ganzen Intervall positiv und konkav ist.
-      Diese Funktion sorgt dafür, dass Eigenwerte in der Mitte des Intervalls stärker ins Gewicht fallen
-      Nach \cite[S. 3]{hauptteilTkachuk} sei die Funktion
-      $$g(z) = -(z-((1+\alpha)\lambda_a -\alpha\lambda_b))(z-((1+\alpha)\lambda_b-\alpha\lambda_a))$$
-      sehr geeignet, man könnte aber auch zum Beispiel die Funktion
-      $$\Hat g(z) := -(z-(\lambda_a-\alpha))(z-(\lambda_b+\alpha))$$
-      nutzen, die die gleichen Eigenschaften besitzt.
-      In den Funktionen stellt $\alpha>0$ einen Parameter dar, der dafür sorgt, dass die Funktion auf dem Intervall positiv ist.
-      $\alpha$ wird auch \zitat{Inflationsparameter} (vgl. \cite[S. 3]{hauptteilTkachuk}) genannt.
+            Nutze dazu eine Gewichtungsfunktion, die auf dem ganzen Intervall positiv und konkav ist.
+            Diese Funktion sorgt dafür, dass Eigenwerte in der Mitte des Intervalls stärker ins Gewicht fallen
+            Nach \cite[S. 3]{hauptteilTkachuk} sei die Funktion
+            $$g(z) = -(z-((1+\alpha)\lambda_a -\alpha\lambda_b))(z-((1+\alpha)\lambda_b-\alpha\lambda_a))$$
+            sehr geeignet, man könnte aber auch zum Beispiel die Funktion
+            $$\Hat g(z) := -(z-(\lambda_a-\alpha))(z-(\lambda_b+\alpha))$$
+            nutzen, die die gleichen Eigenschaften besitzt.
+            In den Funktionen stellt $\alpha>0$ einen Parameter dar, der dafür sorgt, dass die Funktion auf dem Intervall positiv ist.
+            $\alpha$ wird auch \zitat{Inflationsparameter} (vgl. \cite[S. 3]{hauptteilTkachuk}) genannt.
 % Inflationsparameter
 
-      Man findet so die erste Funktion, welche man mit Verfahren der Optimierung sinnvoll minimieren könnte:
-      $$J(s) = \sum_{j=1}^n g(\lambda_j)h(\lambda_j)$$
+            Man findet so die erste Funktion, welche man mit Verfahren der Optimierung sinnvoll minimieren könnte:
+            $$J(s) = \sum_{j=1}^n g(\lambda_j)h(\lambda_j)$$
 
-      Hier müsste man allerdings jeden Eigenwert zuerst berechnen, um dann diese Formel anzuwenden.
-      Auch hängt weder $g$ noch $h$ explizit von $s$ ab, weshalb diese Funktion eher zur Ermittlung der gewichteten Anzahl von Eigenwerten gesehen werden kann, als die tatächliche Zielfunktion, die es zu minimieren gilt.
-      Nutze daher die Identität von Futamura, wie sie in Theorem \ref{thrm: IdentitätFutamura} vorgestellt wurde.
-      
-      Um diese Identität anzuwenden, berachte die Funktion
-      $$f(z) = \sum_{j=1}^{n} \frac{1}{z-\lambda_j},$$
-      wobei die $\lambda_j$ die Eigenwerte des Matrix pencils $(\AlamB)$ sind.
+            Hier müsste man allerdings jeden Eigenwert zuerst berechnen, um dann diese Formel anzuwenden.
+            Auch hängen weder $g$ noch $h$ explizit von $s$ ab, weshalb diese Funktion eher zur Ermittlung der gewichteten Anzahl von Eigenwerten gesehen werden kann, als die tatächliche Zielfunktion, die es zu minimieren gilt.
+            Das Ziel ist daher die Zählung der Eigenwerte durch
+            \begin{equation}
+                  \label{eqn: ZielfunktionMitPolstellen}
+                  \frac 1 {2\pi i}\int_\gamma \sum_{j=1}^{n} \frac{1}{z-\lambda_j}\ dz
+            \end{equation}
+% besser wäre es, hier eine Funktion f/g zu definieren, man hat nicht so oft Eigenschaften über das Integral
+            Auf diese Gleichung kann Theorem \ref{thrm: IdentitätFutamura} angewendet werden.
+            Allerdings muss man zunächst zeigen, dass diese Gleichung tatsächlich die Eigenwerte in dem Intervall zählt, dafür benötigt man aber den Residuensatz, welcher im nächsten Abschnitt vorgestellt wird.
+% irgendwo muss noch gezeigt werden, dass alle Eigenwerte auf der reellen Achse liegen, sonst könnte man sich fragen, ob die Gleichung fehlerhaft wird, wenn man über einen Kreis in IC integriert
+      \section{Komplexe Analysis und der Residuensatz}
+            Dieses Kapitel behandelt ausschließlich den Residuensatz und die Argumente, warum man ihn auf (\ref{eqn: ZielfunktionMitPolstellen}) anwenden kann.
+            
+            Zuerst wird der Residuensatz vorgestellt und anschließend wird die benötigte Theorie definiert und auf (\ref{eqn: ZielfunktionMitPolstellen}) angewendet.
 
-      Die Funktion besitzt somit eine Polstelle in jedem Eigenwert.
+            \begin{theorem}(Theorem 9.2 (Residue theorem)\cite[S. 141]{complexAnalysis})
+                  \label{thrm: Residuensatz}
+                  Sei $f$ analytisch auf $\Omega$, mit Ausnahme der isolierten Singularitäten $a_1,...,a_n$. Wenn für einen Kreis $\gamma\subseteq\C$  $\gamma \sim 0$ und $a_j\notin \gamma,\ j=1,...,n$ gilt, dann
+                  $$\int_\gamma f(z)\ dz = \frac{1}{2\pi i}\sum_{k=1}^{n} n(\gamma, a_k)\Res_{a_k}f$$
+            \end{theorem}
+            Beweis: siehe \cite[S. 142]{complexAnalysis}
 
-      Nach dem Residuensatz gilt:
-      
+            Die folgenden Aussagen erklären die Voraussetzungen und das Resultat des Theorems und stammen alle aus \cite{complexAnalysis}.
+            Die Resultate und Definitionen werden nur kurz angeschnitten, da man sie in dieser Ausarbeitung nur für den Residuensatz \ref{thrm: Residuensatz} verwendet.
+            \begin{itemize}
+% nicht alle sind fett markiert
+                  \item $\mathbf{analytisch in z:}$ ist eine Eigenschaft von komplexen Funktionen, die besagt, dass man die Funktion als eine Potenzreihe um $z$ entwickeln kann.
+                        Für (\ref{eqn: ZielfunktionMitPolstellen}) reicht aber folgende Aussage (vgl. \cite[S. 24]{complexAnalysis}):
+% man müsste die Funktion referenzieren
+                        Für Polynome $p(z)$ und $q(z)$ sei die rationale Funktion $r(z):=\frac{p(z)}{q(z)}$ analytisch auf $\{z\in\C: q(z)\ne 0\}$.
+                        
+                        Offenbar ist (\ref{eqn: ZielfunktionMitPolstellen}) eine rationale Funktion:
+
+                        $$L(z) = \frac{p(Z)}{q(z)}$$
+                        mit 
+                        \begin{align*}
+                              p(z) &= \sum_{j=1}^{n}\prod_{\underset{i\ne j}{i=1}}^{n} z-\lambda_i,\\
+                              q(z) &= \prod_{i=1}^{n} z-\lambda_i
+                        \end{align*}
+
+                        Offenbar sind $p$ und $q$ Polynome und $\{z: q(z)\ne 0\} = \C\setminus\{\lambda_i, i=1,...,n\}$
+                        Daher ist $L$ analytisch auf $\C$ bis auf $\lambda_1,...,\lambda_n$
+                  \item $\mathbf{b\text{ isolierte Singularität:}}$
+                        Laut \cite[S. 74]{complexAnalysis} habe $f$ eine isolierte Singularität bei $b$, wenn $f(b)$ nicht definiert und$f$ analytisch für $0<|z-b|<\epsilon$ mit $\epsilon>0$ sei.
+
+                        Offenbar ist $L(\lambda_i)$ nicht definiert für $i=1,...,n$ und da $L$ nur eine endliche Anzahl an Singularitäten besitzt, gilt:
+
+                        \begin{equation}
+                              \label{hilfe: complexAnalysis_isolierteSingularitäten}
+                              f \text{ analytisch für } 0<|z-\lambda_i|<\widetilde{\epsilon},\quad i=1,...,n
+                        \end{equation}
+                        mit
+                        $$\widetilde{\epsilon}:= \frac{1}{2}\,\min_{i,j\in\{1,...,n\}: \lambda_i\ne \lambda_j} |\lambda_i-\lambda_j|$$
+
+                        Für den Fall, dass ein Eigenwert doppelt vorkommt, so ist der Eigenwert trotzdem eine isolierte Singularität, da die Definition dies zulässt.
+% aus den Fingern gesaugt
+                  \item $\frac{1}{2\pi i}\int_{C} \frac 1 {z-a}\ dz:$
+                        Dieses Integral ist zwar nicht direkt für Theorem \ref{thrm: Residuensatz} von Bedeutung, allerdings wird damit vieles vereinfacht.
+
+                        Sei $z_0\in\C,\ r>0\text{ und }C=\{z_0+r e^{it}: t\in [0,2\pi]\}$ (vgl. \cite[S. 48]{complexAnalysis}), laut Proposition 4.13 aus \cite[S. 48]{complexAnalysis} gilt:
+                        \begin{equation}
+                              \label{hilfe: complexAnalysis_IntegralEinsDurchX}
+                              \frac{1}{2\pi i}\int_C \frac 1 {z-a}\ dz = \begin{cases}
+                                    1 & \text{: } |a-z_0|<r \\
+                                    0 & \text{: } |a-z_0|>r
+                                    \end{cases}
+                        \end{equation}
+                  \item $n(\gamma, a)$:
+                        Sei $\gamma$ ein Kreis und $a\in \C\setminus \gamma$.
+                        Nach Definition 5.4 aus \cite[S. 65]{complexAnalysis} ist die Windungsnummer $n(\gamma,a)$ von $\gamma$ über $a$ wie folgt definiert:
+                        $$n(\gamma,a):= \frac{1}{2\pi i}\int_\gamma \frac{1}{\xi-a}\ d\xi$$
+
+                        Man erkennt, dass mit $\gamma = C$\footnote{$C$ aus (\ref{hilfe: complexAnalysis_IntegralEinsDurchX}) gemeint}  und (\ref{hilfe: complexAnalysis_IntegralEinsDurchX}) gilt:
+                        \begin{equation}
+                              \label{hilfe: complexAnalysis_WindungNullEins}
+                              n(\gamma,a) = \begin{cases}
+                                    1& \text{ : }a\in B_r(z_0)\\
+                                    0& \text{ : }a\notin\overline {B_r(z_0)}
+      % ist klar was mit Inneren eines Pfadintegrals gemeint ist?
+                              \end{cases}
+                        \end{equation}
+                        Hierbei benötigt man das $C$ aus (\ref{hilfe: complexAnalysis_IntegralEinsDurchX}), damit der Kreis positiv orientiert ist und jeder Punkt des Kreises nur einmal durchlaufen wird.
+% jetzt klingt es so, also könne kein anderes C dies vollbringen
+                  \item $\gamma \sim 0$:
+                        Sei $\gamma$ geschlossene Kurve und $\Omega$ ein Gebiet, durch Anwenden von Definition 5.5 aus \cite[S. 67]{complexAnalysis} folgt:
+                        $$\gamma \sim 0 \Leftrightarrow n(\gamma, a)=0\ \forall a\notin \Omega$$
+
+                        Mit obiger Theorie schließt man, dass gilt:
+                        $$\gamma\subset \Omega \Rightarrow n(\gamma, a)=0$$
+                        da sich $\gamma$ nicht um den Punkt $a$ winden kann.
+% das ist schlecht begründet
+
+                  \item $\Res_af$:
+                        Nach Beispiel 9.3 aus \cite[S. 142]{complexAnalysis} gilt für eine einfache Polstelle:
+                        $$\Res_af = \lim_{z\to a} (z-a)f(z)$$
+                        Anwenden auf $\Res_{\lambda_i}L$ ergibt:
+                        \begin{align*}
+                              \Res_{\lambda_i}L =& \lim_{z\to \lambda_i} \sum_{j=1}^{n} (z-\lambda_i)\frac{1}{z-\lambda_j} = \underbrace{\sum_{\underset{j\ne i}{j=1}}^{n} \frac{z-\lambda_i}{z-\lambda_j}}_{\to 0} + \frac{z-\lambda_I}{z-\lambda_i} \\
+                              =& 1
+                        \end{align*}
+
+                        Man beachte, dass für einen Eigenwert $\lambda$, der k-mal vorkommt, gilt:
+                        $$\Res_\lambda L = k$$
+                        In dem Residuensatz ist es somit nicht von Belangen, wie groß der Koeffizient eines Summanden ist. Am Ende erhält man hier immer die Anzahl an Eigenwerten, die sich in dem Integrationsgebiet befinden.
+            \end{itemize}
+
+            Damit wurde gezeigt, dass der Residuensatz auf die Funktion $L$ angewendet werden kann.
+
+            Ferner gelte nach \cite[S. 77]{complexAnalysisVL} der Residuensatz auch für \zitat{toy contours}\cite[S. 77]{complexAnalysisVL}.
+% Zitat überprüfen/ übersetzen
+            Beispiele für toy contours sind Rechtecke oder Kreisausschnitte (siehe \cite[S. 42]{complexAnalysisVL}).
+
+      \section{Anwendung des Residuensatzes}
+            Nach (\ref{hilfe: complexAnalysis_WindungNullEins}) gilt für einen Eigenwert, der nicht in dem Intervall liegt: 
+
+            Mit dem Residuensatz \ref{thrm: Residuensatz} gilt folglich für (\ref{eqn: ZielfunktionMitPolstellen}):
+            $$\int_\gamma \sum_{j=1}^{n} \frac{1}{z-\lambda_j}\ dz = \mu$$
+
+            und mit der Identität von Futamura:
+            $$\mu = \int_\gamma \tr((zM-K)\inv M)\ dz$$
+
+            Man hat somit die ungewichtete Zählung der Eigenwerte als Integral darstellen können, analog kann auch die gewichtete Zählung umgeschrieben werden:
+            $$J(s) = \int_\gamma \sum_{j=1}^{n} g(z)\frac{1}{z-\lambda_j}\ dz$$
+% nochmal schauen, ob alles passt
+
 \chapter{Implementierung}
 \label{sec: Programmieren}
       \section{Erklärungen}
@@ -811,25 +928,8 @@ Tag der Einreichung: \datum
 
 \chapter{Literaturverzeichnis}
 
-      % \begin{figure}[h]
-      %       \centering
-      %       \begin{minipage}[h]{0.49\linewidth}
-      %       \centering
-      %       \bilder{"./sources/himmel_und_wolken (www.umweltbundesamt.de)"}
-      %       \caption{Betrachter:in auf der Erde}\cite{Himmel}
-      %       \label{fig:himmel}
-      %       \end{minipage}
-      %       \hfill
-      %       \begin{minipage}[h]{0.49\linewidth}
-      %       \centering           
-      %       \bilder{"./sources/erde (www.umweltbundesamt.de)"}
-      %       \caption{Betrachter:in im Weltall auf die Erde}\cite{ErdeausWeltall}
-      %       \label{fig:ErdeausWeltall}
-      %       \end{minipage}
-      % \end{figure}
-
       \printbibliography
-
+% es fehlt Bilderverzeichniss
 
 %%
 %% Erscheint auf letzter Seite
